feat: Mejora de los errores y los test